--- a/.github/workflows/jekyll-lint.yml
+++ b/.github/workflows/jekyll-lint.yml
@@ -7,7 +7,6 @@
 
 name: Jekyll - Install dependencies and run linters
 
-
 on:
   push:
     branches: [ main ]
@@ -22,7 +21,7 @@ jobs:
         ruby-version: ['3.3']
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Ruby
     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
@@ -31,4 +30,4 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run rubocop
-      run: bundle exec rubocop
+    - run: bundle exec rubocop
